Add Controller classes, add properties for dev and prod profiles, update Service classes, add docker-compose.yml and docker-entrypoint-initdb.d
.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 spring.application.name=springboot3-profile-mng-no-comments
+
+spring.datasource.generate-unique-name = false
+
+#spring.profiles.active = dev
+spring.profiles.active = prod
+
+welcome.message = <b>Welcome All to</b> this Spring Boot 3 sample project: <b>Profile Manager REST API !</b></br></br>* This is a REST \
+  Web Service Producer App, so you should access it through its Rest exposed endpoints and not from your browser web page. \
+  Client apps can be created for this Rest Web Service, and these client apps then could be accessed through the final client \
+  browser or through any other sort of client app or device. For this REST API documentation in HTML format, see link: \
+  <a href="/swagger-ui/index.html#/">Documentation in HTML</a> . For this REST API documentation in JSON format, see link: \
+  <a href="/v3/api-docs">Documentation in JSON</a> .</br></br>Created by:</br></br><b>Daniel Pinheiro</b></br>\
+  <b><a href="https://danielpm1982.com">https://danielpm1982.com</a></b>
+
+spring.banner.location=banner.txt
+
+spring.h2.console.enabled = false
+
+management.endpoints.web.exposure.exclude = *
+
 spring.docker.compose.enabled=false
