Unset profile setting at application.properties and add .mvn config directory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=springboot3-profile-mng-no-comments
 spring.datasource.generate-unique-name = false
 
 #spring.profiles.active = dev
-spring.profiles.active = prod
+#spring.profiles.active = prod
 
 welcome.message = <b>Welcome All to</b> this Spring Boot 3 sample project: <b>Profile Manager REST API !</b></br></br>* This is a REST \
   Web Service Producer App, so you should access it through its Rest exposed endpoints and not from your browser web page. \
